# IPGeoTracker

./: BusyIndicatorOverlay.qml  CMakeLists.txt  IPGeoTracker_test.db  Main.qml  PreviewPopup.qml  README.md  dbmanager.cpp  dbmanager.h  geolocationdatamanager.cpp  geolocationdatamanager.h  ipstackapi.cpp  ipstackapi.h  main.cpp
tests/: CMakeLists.txt  main.cpp  minitestframework.h
